do NOT show additional category flag and stop scrollbar in cats-widget

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -966,13 +966,13 @@ tr.commentColorffffff div.glyphicon-bookmark {
 }
 div.commentMarkedTag {
     position: absolute;
-	right: 18px;
+	right: 0;
     font-size: 15px;
 	visibility: hidden;
 }
 div.commentAttachmentsTag {
 	position: absolute;
-	right: 35px;
+	right: 20px;
 	font-size: 15px;
 	top: 2px;
 }
@@ -997,9 +997,6 @@ tr.commentMarked div.commentInfo div.commentMarkedTag {
 }
 .commentTextArea {
 	padding-left: 5px;
-	.catsHeader {
-		smallpart-cats-select {width: 10em;}
-	}
 	.et2_file.et2_vfs {
 		height: 25px;
 		width: ~"calc(100% - 25px)";
